--- a/Tasks/Views/Tasks/_TasksTable.cshtml
+++ b/Tasks/Views/Tasks/_TasksTable.cshtml
@@ -12,7 +12,7 @@
                     <tr data-taskid="@task.Id">
                         <td>@task.Id</td>
                         <td>@task.Description</td>
-                        <td>@task.TimeFrame.Description</td>                        
+                        <td>@task.TimeFrame.TimeFrameDescription</td>                        
                         <td>@task.TimeFrame.Due</td>                        
                     </tr>
                 }
