--- a/Tasks/CSS/Global/layout.css
+++ b/Tasks/CSS/Global/layout.css
@@ -100,6 +100,7 @@ h2, h3 {
     /*Column and row sizes*/
     grid-template-columns: 150px auto 350px;
     grid-template-rows: 60px auto auto;
+    grid-gap: 0 10px;
     /*Fill view height and width*/
     width: 100%;
     height: 100%;
@@ -131,7 +132,6 @@ article {
     grid-row: 2;
     /* Start on the second column line and stop at the third column line */
     grid-column: 2 / 3;
-    overflow: hidden;
 }
 
 /*Right sidebar*/
@@ -169,11 +169,19 @@ header, footer {
 article {
     background: var(--article-bg-color);
     z-index: 10;
+    width: 100%;
+    height: 100%;
+}
+
+#content {
+    display: flex;
+    flex: 1 1 100%;
+    flex-direction: column;
+    margin: 0;
 }
 
 
-    /*Used so that the animation works when expanding left*/
-
+/*Used so that the animation works when expanding left*/
 #content.float-right{
     float: right;
 }
@@ -342,8 +350,6 @@ aside {
         height: 100%;
         width: 100%;
         float: right;
-        padding-bottom: 10px;
-        padding-left: 5px;
     }
 
         aside > .aside-container > #aside-content {
@@ -375,6 +381,7 @@ aside {
                 padding: 0;
                 margin-top: 30px;
                 display: flex;
+                flex: 1 1 100%;
                 align-items: flex-end;
                 flex-direction: column-reverse;
             }
