--- a/Tasks/Views/Projects/_AddTask.cshtml
+++ b/Tasks/Views/Projects/_AddTask.cshtml
@@ -9,7 +9,7 @@
             <tr data-taskid="@task.Id">
                 <td>@task.Id</td>
                 <td>@task.Description</td>
-                <td>@task.TimeFrame.Description</td>
+                <td>@task.TimeFrame.TimeFrameDescription</td>
                 <td>@task.TimeFrame.Due</td>
             </tr>
         }
