--- a/Tasks/Views/Tasks/_AddTask.cshtml
+++ b/Tasks/Views/Tasks/_AddTask.cshtml
@@ -17,6 +17,7 @@
     <h3>Priority</h3>
     @Html.DropDownListFor(model => model.PriorityId, Model.PriorityDropDownItems, new { @id = "Add_PriorityId" })
 
+    /*TimeFrame picker*/
     <h3>Due date due</h3>
     <div id="add-tabs">
 
