--- a/Tasks/CSS/Global/jquery-ui.theme.css
+++ b/Tasks/CSS/Global/jquery-ui.theme.css
@@ -30,10 +30,14 @@
 }
 .ui-widget.ui-widget-content {
 	border: 1px solid #f7f7f7;
+    /*Shadow card height*/
+    -moz-box-shadow: var(--shadow-card);
+    -webkit-box-shadow: var(--shadow-card);
+    box-shadow: var(--shadow-card);
 }
 .ui-widget-content {
 	border: 1px solid #dddddd;
-	background: #ffffff;
+	background: var(--theme-white);
 	color: #333333;
 }
 .ui-widget-content a {
@@ -41,8 +45,8 @@
 }
 .ui-widget-header {
 	border: 1px solid #e5e9ec;
-	background: #e5e9ec;
-	color: #333333;
+	background: var(--theme-white);
+	color: var(--theme-black);
 	font-weight: bold;
 }
 .ui-widget-header a {
@@ -60,8 +64,8 @@
 works properly when clicked or hovered */
 html .ui-button.ui-state-disabled:hover,
 html .ui-button.ui-state-disabled:active {
-	border: 1px solid #f7f7f7;
-	background: #f7f7f7;
+	border: 1px solid var(--theme-grey);
+	background: white;
 	font-weight: normal;
 	color: #454545;
 }
@@ -75,19 +79,18 @@ a:visited.ui-button,
 	color: #454545;
 	text-decoration: none;
 }
-.ui-state-hover,
-.ui-widget-content .ui-state-hover,
-.ui-widget-header .ui-state-hover,
-.ui-state-focus,
-.ui-widget-content .ui-state-focus,
-.ui-widget-header .ui-state-focus,
-.ui-button:hover,
-.ui-button:focus {
-	border: 1px solid #30ff9b;
-	background: #30ff9b;
-	font-weight: normal;
-	color: #2b2b2b;
-}
+    .ui-state-hover,
+    .ui-widget-content .ui-state-hover,
+    .ui-widget-header .ui-state-hover,
+    .ui-state-focus,
+    .ui-widget-content .ui-state-focus,
+    .ui-widget-header .ui-state-focus,
+    .ui-button:hover,
+    .ui-button:focus {
+        font-weight: normal;
+        color: var(--theme-green);
+        border: 1px solid var(--theme-green);
+    }
 .ui-state-hover a,
 .ui-state-hover a:hover,
 .ui-state-hover a:link,
@@ -111,16 +114,17 @@ a.ui-button:focus {
 a.ui-button:active,
 .ui-button:active,
 .ui-button.ui-state-active:hover {
-	border: 1px solid #00ffed;
-	background: #00ffed;
-	font-weight: normal;
-	color: #363537;
+    background: var(--theme-green);
+    border: 1px solid var(--theme-green);
+    font-weight: normal;
+    color: var(--input-textbox-focus);
 }
-.ui-icon-background,
-.ui-state-active .ui-icon-background {
-	border: #00ffed;
-	background-color: #363537;
-}
+    .ui-icon-background,
+    .ui-state-active .ui-icon-background {
+        border-bottom: 1px solid var(--input-textbox-focus);
+        font-weight: normal;
+        color: var(--input-textbox-focus);
+    }
 .ui-state-active a,
 .ui-state-active a:link,
 .ui-state-active a:visited {
