--- a/Tasks/Views/Tasks/_EditTask.cshtml
+++ b/Tasks/Views/Tasks/_EditTask.cshtml
@@ -1,63 +1,10 @@
-﻿@using System.Web.Mvc.Html
-@model Tasks.ViewModels.Tasks.TaskEditViewModel
+﻿<h1>Edit a task</h1>
+<br />
 
+<div id="aside-edit-noselect-container">
+    <h3>Double click a task to select it</h3>
+</div>
 
-<h4 class="modal-title">Edit task</h4>
+<div id="aside-edit-select-container">
 
-@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "Edit_Form" }))
-{
-    @Html.AntiForgeryToken()
-
-    @Html.HiddenFor(model => model.TimeFrameId, new { @id = "Edit_TimeFrameId" })
-    @Html.HiddenFor(model => model.Date, new { @id = "Edit_Date" })
-
-    <h3>Description</h3>
-    @Html.TextBoxFor(model => model.Description, new { @id = "Edit_Description", @class = "form-control", PlaceHolder = "Task description" })
-
-    <h3>Priority</h3>
-    @Html.DropDownListFor(model => model.PriorityId, Model.PriorityDropDownItems, new { @id = "Edit_TimeFrameId" })
-
-    <h3>Due date due</h3>
-    <div id="edit-tabs">
-
-        <ul>
-            <li><a href="#edit-open">Open</a></li>
-            <li><a href="#edit-day">Day</a></li>
-            <li><a href="#edit-week">Week</a></li>
-            <li><a href="#edit-month">Month</a></li>
-        </ul>
-
-        <div id="edit-day">
-
-            <h3>Due On the date...</h3>
-
-            <div class="input-container">
-                <input class="timeframe-date" placeholder="Choose date" />
-            </div>
-            <div class="input-container">
-                <p>specify time?</p>
-                @Html.CheckBoxFor(model => model.HasTime, new { @id = "Edit_PriorityId" })
-            </div>
-            <div class="input-container">
-                @Html.TextBoxFor(model => model.Time, new { @id = "Edit_Time" })
-            </div>
-
-        </div>
-
-        <div id="edit-week">
-            <h3>Due in the week of...</h3>
-            <input class="timeframe-week" placeholder="Choose a week" />
-        </div>
-
-        <div id="edit-month">
-            <h3>Due in the month of...</h3>
-            <input class="timeframe-month" placeholder="Choose a month" />
-        </div>
-
-        <div id="edit-open">
-            <h3>No due date</h3>
-        </div>
-
-    </div>
-    <button id="editTask">Save Task</button>
-}
+</div>
