--- a/Tasks/Views/Thoughts/_ThoughtsTable.cshtml
+++ b/Tasks/Views/Thoughts/_ThoughtsTable.cshtml
@@ -11,7 +11,7 @@
             </tr>
         </thead>
         <tbody id="thoughtResultsTableBody">
-        @foreach (ThoughtViewModel thought in Model.ThoughtsList.OrderBy(x => x.SortId))
+        @foreach (ThoughtViewModel thought in Model.ThoughtList.OrderBy(x => x.SortId))
         {
             <tr 
                 data-thoughtid="@thought.Id"
